5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4057/executions/1601_2425.log
== TEST (2019-03-22 15:29:01) 
-- CODE:
d = float(input("Qual a distancia percorrida por seu veiculo? "))
c = float(input("Qual o total de combustivel gasto? "))
print(round(d/c, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 15:29:10) 
-- CODE:
d = float(input("Qual a distancia percorrida por seu veiculo? "))
c = float(input("Qual o total de combustivel gasto? "))
print(round(d/c, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 15:29:47) 
-- CODE:
d = float(input("Qual a distancia percorrida por seu veiculo? "))
c = float(input("Qual o total de combustivel gasto? "))
print(round(d/c, 3)"km/l")
-- EXECUTION TIME:
0.161837
-- ERROR:
  File "/home/codebench/codes/1601/2425/main.py", line 3
    print(round(d/c, 3)"km/l")
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 15:30:20) 
-- CODE:
d = float(input("Qual a distancia percorrida por seu veiculo? "))
c = float(input("Qual o total de combustivel gasto? "))
e = round(d/c, 3)
print(e "km/l")
-- EXECUTION TIME:
0.126959
-- ERROR:
  File "/home/codebench/codes/1601/2425/main.py", line 4
    print(e "km/l")
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 15:30:41) 
-- CODE:
d = float(input("Qual a distancia percorrida por seu veiculo? "))
c = float(input("Qual o total de combustivel gasto? "))
e = round(d/c, 3)
print(e" km/l")
-- ERROR:
File "XXXX", line 4
    print(e" km/l")
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 15:31:20) 
-- CODE:
d = float(input("Qual a distancia percorrida por seu veiculo? "))
c = float(input("Qual o total de combustivel gasto? "))
e = round(d/c, 3)
print(e "km/l")
-- ERROR:
File "XXXX", line 4
    print(e "km/l")
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 15:31:44) 
-- CODE:
d = float(input("Qual a distancia percorrida por seu veiculo? "))
c = float(input("Qual o total de combustivel gasto? "))
e = round(d/c, 3)
print(e)
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 15:32:15) 
-- CODE:
d = float(input("Qual a distancia percorrida por seu veiculo? "))
c = float(input("Qual o total de combustivel gasto? "))
e = round(d/c, 3)
print(e "km/l")
-- ERROR:
File "XXXX", line 4
    print(e "km/l")
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 15:32:25) 
-- CODE:
d = float(input("Qual a distancia percorrida por seu veiculo? "))
c = float(input("Qual o total de combustivel gasto? "))
e = round(d/c, 3)
print(e "km/l ")
-- ERROR:
File "XXXX", line 4
    print(e "km/l ")
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 15:32:39) 
-- CODE:
d = float(input("Qual a distancia percorrida por seu veiculo? "))
c = float(input("Qual o total de combustivel gasto? "))
e = round(d/c, 3)
print(e,"km/l ")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 15:33:03) 
-- CODE:
d = float(input("Qual a distancia percorrida por seu veiculo? "))
c = float(input("Qual o total de combustivel gasto? "))
e = round(d/c, 3)
print(e,"km/l")
-- EXECUTION TIME:
0.210945
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
